Fixed multiple scrollbars issue on left side nav Load cameras on map zoom in also to synch cameras list with left side nav Clear markers before loading cameras to avoid previous markers flushing

--- a/css/public-google-map.css
+++ b/css/public-google-map.css
@@ -3,6 +3,9 @@
   width: 150px;
   height: auto;
 }
+.camera-snapshot {
+  cursor: pointer;
+}
 .camera-info-name {
   display: block;
   position:absolute;
@@ -76,5 +79,4 @@ a#lnkBacktoMap {
 .details td span {
   color: black;
   padding: 0px 15px 5px 0px;
-
 }
